# ziium

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  ERRORS.md  EXAMPLES.md  GRAMMAR.ebnf  HISTORY.md  LANGUAGE_SPEC.md  LICENSE  README.md  ROADMAP.md  SEMANTICS.md  TASKS.md  TOKENS.md
.github/workflows/: pages.yml
docs/: AI_CONTEXT.md  ARCHITECTURE.md  DECISIONS.md  EXAMPLES.md  GRAMMAR.ebnf  IMPLEMENTATION.md  LANGUAGE.md  LANGUAGE_SPEC.md  MESSAGE_BOUNDARIES.md  MESSAGE_MODEL.md  PARSER_TEST_CASES.md  PRD.md  RESEARCH_JA_PROTOTYPE.md  ROADMAP.md  SEMANTICS.md  SYNTAX_GUIDE.md  TEST_PLAN.md  TOKENS.md  VISION.md  korean_language_project_docs.md
samples/: 00_hello_everyone.zm  01_hello_name.zm  02_if_else.zm  03_countdown.zm  04_add_function.zm  05_list_and_length.zm  06_record_profile.zm  07_nested_properties.zm  08_message_syntax.zm  09_call_frames.zm  10_hanoi.zm  11_hanoi_ziium_style.zm  12_canvas_hanoi.zm  13_story.zm  13_xor_neural_network.zm  14_foreach.zm  15_exist_binding.zm  16_type_conversion.zm  17_mutable_vs_const.zm  18_inline_if_else.zm  README.md  ja_00_hello.zmj  ja_01_function.zmj
src/: ast.rs  error.rs  hir.rs  interpreter.rs  lexer.rs  lexer_ja.rs  lib.rs  main.rs  message.rs  normalizer.rs  parser.rs  resolver.rs  token.rs  web.rs
tests/: cli_smoke.rs  hir_examples.rs  interpreter_examples.rs  lexer_examples.rs  lexer_ja_examples.rs  parser_case_docs.rs  parser_examples.rs  repl_session.rs  resolver_examples.rs  rosetta_examples.rs  sample_files.rs
web/: README.md  app.js  index.html  styles.css
(+1 files in other folders)
