[package]
name = "ziium"
version = "0.1.0"
edition = "2024"
description = "The Ziium programming language: a Korean, message-oriented language implemented in Rust."
repository = "https://github.com/ziium/ziium"
license = "MIT"

[lib]
name = "ziium"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.114"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "17.0.2"
unicode-width = "0.2.2"

[dev-dependencies]
indoc = "2"
